--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,23 +5,12 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
-    <TimePicker
-        android:id="@+id/timePicker"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="24dp" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:text="hey"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
     <Button
-        android:text="Save"
-        android:layout_below="@id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="setTime"/>
+        android:text="@string/str_btn_label"
+        android:id="@+id/btnSet"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="57dp" />
 </RelativeLayout>
