--- a/app/src/main/res/layout/fragment_list_object.xml
+++ b/app/src/main/res/layout/fragment_list_object.xml
@@ -3,6 +3,11 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/et_search" />
+
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
