--- a/app/src/main/res/layout/fragment_add_object.xml
+++ b/app/src/main/res/layout/fragment_add_object.xml
@@ -21,6 +21,24 @@
         android:id="@+id/et_item_price"
         android:hint="Price"/>
 
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_date_pick" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/txt_created_on"
+            android:hint="Created Date"/>
+
+    </LinearLayout>
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
